logs/ursa2.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/ursa2'...
Listing './lib/python3.5/site-packages/ursa2/assets'...
Listing './lib/python3.5/site-packages/ursa2/assets/clo'...
Listing './lib/python3.5/site-packages/ursa2/assets/clo/_data'...
Listing './lib/python3.5/site-packages/ursa2/assets/clo/static'...
Listing './lib/python3.5/site-packages/ursa2/assets/clo/static/css'...
Listing './lib/python3.5/site-packages/ursa2/assets/clo/static/img'...
Listing './lib/python3.5/site-packages/ursa2/assets/clo/static/js'...
Listing './lib/python3.5/site-packages/ursa2/assets/clo/template'...
Compiling './lib/python3.5/site-packages/ursa2/build.py'...
***   File "./lib/python3.5/site-packages/ursa2/build.py", line 154
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ursa2/conf.py'...
***   File "./lib/python3.5/site-packages/ursa2/conf.py", line 98
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ursa2/deps.py'...
***   File "./lib/python3.5/site-packages/ursa2/deps.py", line 61
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ursa2/handler.py'...
***   File "./lib/python3.5/site-packages/ursa2/handler.py", line 108
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ursa2/http.py'...
***   File "./lib/python3.5/site-packages/ursa2/http.py", line 102
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ursa2/log.py'...
***   File "./lib/python3.5/site-packages/ursa2/log.py", line 55
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ursa2/main.py'...
***   File "./lib/python3.5/site-packages/ursa2/main.py", line 59
    print "It's not an empty folder.\nContinue may override your existing files.\nStill continue initializing?"
                                                                                                              ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/ursa2/proxy.py'...
***   File "./lib/python3.5/site-packages/ursa2/proxy.py", line 91
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ursa2/render.py'...
***   File "./lib/python3.5/site-packages/ursa2/render.py", line 82
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ursa2/server.py'...
***   File "./lib/python3.5/site-packages/ursa2/server.py", line 112
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/ursa2/timestamp.py'...
***   File "./lib/python3.5/site-packages/ursa2/timestamp.py", line 127
    print sample
               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/ursa2/tpl'...
Compiling './lib/python3.5/site-packages/ursa2/utils.py'...
***   File "./lib/python3.5/site-packages/ursa2/utils.py", line 103
    except Exception,e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/ursa2-0.0.12.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
